# DexYield

./: .gitignore  AUDIT.MD  DEPLOY.txt  INSTRUCTIONS.MD  README.MD
.claude/: settings.local.json
api/: Dockerfile  README.md  docker-compose.yml  id.json  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: index.ts
api/src/db/: kysely.ts
contracts/: .env.example  Anchor.toml  Cargo.toml  README.MD  SETUP.md  dexyield-config.json  package-lock.json  package.json  setup-devnet.ps1  simple-simulation-config.json  test-all.sh  tsconfig.json
contracts/programs/contract/: Cargo.toml
contracts/programs/contract/src/: lib.rs
contracts/programs/lending/: Cargo.toml
contracts/programs/lending/src/: account_structs.rs  error.rs  instructions.rs  lib.rs
contracts/programs/marketplace/: Cargo.toml  marketplace-keypair.json
contracts/programs/marketplace/src/: lib.rs
contracts/scripts/: check-idl-structure.js  create-sol-strategy.js  feed-strategy.js  fetch-all-strategies.js  interactive-deposit.js  reset-user-yield.js  reset-yield-simple.js  setup-workflow.js  setup-working.js  test-deposit.js  test-pda.js  test-pools.js
contracts/tests/: README.md  contract.ts  counter.ts  lending-simple.test.ts  lending.test.ts  lending.ts  marketDex.ts  marketplace-simple.test.ts  marketplace.test.ts
frontend/: .env.mock  README.md  SOLANA_INTEGRATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  reset-yield-console.js  vite.config.js
frontend/src/: main.tsx  polyfills.ts  routeTree.gen.ts  styles.css
frontend/src/components/: ContractInteractionsDashboard.tsx  Footer.tsx  Header.tsx  SimpleDashboard.tsx  WalletButton.css  WalletButton.tsx  WalletDebug.tsx  WalletInfo.tsx
frontend/src/components/admin/: AdminDashboard.tsx  (+2 more)
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: index.ts  useAdminAccess.ts  useContracts.ts  useLending.ts  useLendingActions.ts  useLendingSimplified.ts  useMarketplace.ts  useWallet.ts
frontend/src/icons/: GithubIcon.tsx  MenuIcon.tsx
frontend/src/idl/: lending.json  marketplace.json
frontend/src/lib/: constants.ts  contracts.ts  tokenAccounts.ts
frontend/src/mock/: README.md  context.tsx  data.ts  exports.ts  hooks.ts  index.ts  mock.test.ts  wrapper.tsx
frontend/src/routes/: __root.tsx  admin.tsx  index.tsx
(+24 files in other folders)
