[workspace]
members = [
    "programs/contract",
    "programs/lending"
]
resolver = "2"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[programs.local]
contract = "Ch5VcDt2E84VZXpH6oeAhK9c5ordEpdCUvyT6GSvJseg"
lending = "BZUEgp9psZegJarKqAH5WC6HSYCQ4fY2XphuCd5RsyeF"