[workspace]
members = [
    "programs/marketplace",
    "programs/lending"
]
resolver = "2"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[programs.devnet]
lending = "GBhdq8ypCAdTEqPLm4ZQA4mSUjHik7U43FMoou3qwLxo"
marketplace = "Gju2aAZ2WnbEnEgGZK5fzxj2fevfwexYL5d411ZyY7tv"
