[package]
name = "lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-ix-name = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
proc-macro2 = "1.0.95"
